# sdc-client

./: Readme.md  client.cpp  sdc_client.cpp
task1/: CMakeLists.txt  Readme.md  sdc_client.cpp
task2/: CMakeLists.txt  Chat.cpp  Chat.h  ChatUI.cpp  ChatUI.h  Readme.md  SecureDistributedChat.cpp  SecureDistributedChat.h  sdc_client.cpp
